--- a/fileClick_demo.html
+++ b/fileClick_demo.html
@@ -8,20 +8,34 @@
 
 	<body>
 	
-		<h1>fileClick v1.1.2 demo</h1>
+		<h1>fileClick demo</h1>
 		
 		<div class="jFileClickContainer">
 			<ul class="jUploadList">
 				<li class="jNoAttachments">No hay documentos adjuntos</li>
 			</ul>
 		
-			<div class="jFileInputContainer">
-				<input type="file" class="jInputFile" id="jInputFile0" name="inputFile[]" />
-			</div>
+			<div class="jFileInputContainer"></div>
+			<a class="jAttachDocument" href="#" tabindex="-1">Adjuntar documento</a>
+		</div>
+		
+		<div class="separador"></div>
+		
+		<div class="jFileClickContainer">
+			<ul class="jUploadList">
+				<li class="jNoAttachments">No hay documentos adjuntos</li>
+			</ul>
+		
+			<div class="jFileInputContainer"></div>
 			<a class="jAttachDocument" href="#" tabindex="-1">Adjuntar documento</a>
 		</div>
 		
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js" type="text/javascript"></script>
-		<script src="js/fileClick.1.1.3.js" type="text/javascript"></script>
+		<script src="js/fileClick.1.2.js" type="text/javascript"></script>
+		<script type="text/javascript">
+			$(function() {
+				$(".jFileClickContainer").fileClick();
+			});
+		</script>
 	</body>
 </html>
