--- a/fileClick_demo.html
+++ b/fileClick_demo.html
@@ -31,7 +31,7 @@
 		</div>
 		
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js" type="text/javascript"></script>
-		<script src="js/fileClick.1.2.js" type="text/javascript"></script>
+		<script src="js/jquery.fileClick.js" type="text/javascript"></script>
 		<script type="text/javascript">
 			$(function() {
 				$(".jFileClickContainer").fileClick();
