--- a/fileClick_demo.html
+++ b/fileClick_demo.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!doctype html>
+<html>
 	<head>
 		<title>fileClick demo</title>
 		<link href="css/demo.css" rel="stylesheet" type="text/css" media="screen" />
@@ -7,34 +7,59 @@
 	</head>
 
 	<body>
-	
 		<h1>fileClick demo</h1>
 		
-		<div class="jFileClickContainer">
-			<ul class="jUploadList">
-				<li class="jNoAttachments">No hay documentos adjuntos</li>
-			</ul>
+		<form method="post" action="" id="form">
+			<h2>Primera lista</h2>
+			<div class="jFileClickContainer">
+				<ul class="jUploadList">
+					<li class="jNoAttachments">No hay documentos adjuntos</li>
+				</ul>
+			
+				<div class="jFileInputContainer"></div>
+				<a class="jAttachDocument" href="#" tabindex="-1">Adjuntar documento</a>
+			</div>
+			
+			<div class="separator"></div>
+			
+			<h2>Segunda lista</h2>
+			<div class="jFileClickContainer">
+				<ul class="jUploadList">
+					<li class="jNoAttachments">No hay documentos adjuntos</li>
+				</ul>
+			
+				<div class="jFileInputContainer"></div>
+				<a class="jAttachDocument" href="#" tabindex="-1">Adjuntar documento</a>
+			</div>
+			
+			<div class="separator"></div>
+			
+			<p id="submit"><input type="submit" value="Enviar" /></p>
+		</form>
 		
-			<div class="jFileInputContainer"></div>
-			<a class="jAttachDocument" href="#" tabindex="-1">Adjuntar documento</a>
-		</div>
+		<p><strong>Archivos adjuntos:</strong></p> 
+		<p id="result"></p>
 		
-		<div class="separador"></div>
-		
-		<div class="jFileClickContainer">
-			<ul class="jUploadList">
-				<li class="jNoAttachments">No hay documentos adjuntos</li>
-			</ul>
-		
-			<div class="jFileInputContainer"></div>
-			<a class="jAttachDocument" href="#" tabindex="-1">Adjuntar documento</a>
-		</div>
-		
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js" type="text/javascript"></script>
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js" type="text/javascript"></script>
+		<script type="text/javascript">window.jQuery || document.write('<script src="js/jquery.min.js" type="text/javascript">\x3C/script>')</script>
 		<script src="js/jquery.fileClick.js" type="text/javascript"></script>
 		<script type="text/javascript">
 			$(function() {
 				$(".jFileClickContainer").fileClick();
+				
+				var result = $("#result"),
+					form = $("#form");
+				
+				form.submit(function(e) {
+					e.preventDefault();
+					var files="";
+					form.find("input:file").each(function() {
+						if(this.value) {
+							files+= this.name + ": " + this.value + "<br/>";
+						}
+					});
+					result.html(files);
+				});
 			});
 		</script>
 	</body>
